--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.0"
+    "mongoose": "^8.16.0",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "jest": "^30.0.4",
