migration vers mongo atlas

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb://localhost:27017/test_port_russel
+MONGODB_URI=mongodb+srv://Admin:Admin@cluster0.dco7v8r.mongodb.net/port_russel_test
