--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://Admin:Admin@cluster0.dco7v8r.mongodb.net/port_russel_test
+MONGODB_URI_TEST=mongodb+srv://Admin:Admin@cluster0.dco7v8r.mongodb.net/port_russel_test
